2004/04/27:
- Added system load and uptime

2004/04/16

- First stable release to be distributed with aMule 2.0.0rc3
- For now, just display online statistics with aMule splash
- Enabled Auto-Refresh of statistics every 5s
- Added Auto-Refresh on-off button
- Reduced CPU eating with Kry help