@@ -1,3 +1,6 @@
+2004/05/06
+- Implemented online statistic image generation and saving
+
 2004/04/27:
 - Added system load and uptime
 
